.k8s/overlays/prod/patch-deployment-project.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  template:
    spec:
      containers:
        - name: project
          image: w255mids.azurecr.io/mnd476/project:abf874a
          resources:
            requests:
              cpu: 3500m
              memory: 4Gi
            limits:
              cpu: 3500m
              memory: 4Gi
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
